fixs for openApi
