# 8.less/chat/internal/api/http/server.go
@@ -1,15 +1,18 @@
 package http
 
 import (
+	"chat/internal/api/docs"
+	"chat/internal/api/health"
 	"chat/pkg/logger"
 	"context"
 	"fmt"
-	"html/template"
 	"net/http"
-	"path/filepath"
+	"strings"
 	"time"
 
 	"github.com/prometheus/client_golang/prometheus/promhttp"
+	"github.com/rs/cors"
+	"google.golang.org/grpc/metadata"
 
 	"github.com/grpc-ecosystem/grpc-gateway/v2/runtime"
 	"google.golang.org/grpc"
@@ -28,11 +31,33 @@ type Server struct {
 
 func NewServer(port, grpcPort int) *Server {
 	return &Server{
-		grpcMux:  runtime.NewServeMux(),
+		grpcMux:  runtime.NewServeMux(runtime.WithMetadata(metadataAnnotator)),
 		httpMux:  http.NewServeMux(),
 		port:     port,
 		grpcPort: grpcPort,
 	}
+}
+
+func metadataAnnotator(_ context.Context, req *http.Request) metadata.MD {
+	md := metadata.New(nil)
+
+	if sessionID := req.Header.Get("Session-Id"); sessionID != "" {
+		md.Set("session_id", sessionID)
+		logger.Log.Info("Session ID set in metadata", "session_id", sessionID)
+	} else {
+		logger.Log.Warn("Session ID not found in request headers")
+	}
+
+	for key, values := range req.Header {
+		// Игнорируем заголовок "Connection", почему-то с ним не работает, пишет "ошибка протокола"
+		if strings.ToLower(key) != "connection" {
+			for _, value := range values {
+				md.Append(strings.ToLower(key), value)
+			}
+		}
+	}
+
+	return md
 }
 
 func (s *Server) Start() error {
@@ -40,7 +65,10 @@ func (s *Server) Start() error {
 	ctx, cancel := context.WithCancel(ctx)
 	defer cancel()
 
-	opts := []grpc.DialOption{grpc.WithTransportCredentials(insecure.NewCredentials())}
+	opts := []grpc.DialOption{
+		grpc.WithTransportCredentials(insecure.NewCredentials()),
+		grpc.WithDefaultCallOptions(grpc.MaxCallRecvMsgSize(10 * 1024 * 1024)),
+	}
 	err := pb.RegisterChatServiceHandlerFromEndpoint(ctx, s.grpcMux, fmt.Sprintf("localhost:%d", s.grpcPort), opts)
 	if err != nil {
 		return fmt.Errorf("failed to register gateway: %v", err)
@@ -48,28 +76,39 @@ func (s *Server) Start() error {
 
 	// Обработчик gRPC-шлюза
 	s.httpMux.Handle("/", s.grpcMux)
-
 	// Swagger JSON
-	s.httpMux.HandleFunc("/swagger.json", s.serveSwaggerJSON)
-
+	s.httpMux.HandleFunc("/swagger.json", docs.ServeSwaggerJSON)
 	// Swagger UI
-	s.httpMux.HandleFunc("/swagger/", s.serveSwaggerUI)
-
+	s.httpMux.HandleFunc("/swagger/", docs.ServeSwaggerUI)
 	// health check endpoint
-	s.httpMux.HandleFunc("/health", s.healthCheckHandler)
-
+	s.httpMux.HandleFunc("/health", health.CheckHandler)
 	// metrics endpoint
 	s.httpMux.Handle("/metrics", promhttp.Handler())
+	// CORS middleware
+	corsMiddleware := cors.New(
+		cors.Options{
+			AllowedOrigins: []string{"*"},
+			AllowedMethods: []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+			AllowedHeaders: []string{
+				"Accept",
+				"Content-Type",
+				"Content-Length",
+				"Accept-Encoding",
+				"Authorization",
+				"Session-Id",
+			},
+		},
+	)
 
 	s.httpServer = &http.Server{
 		Addr:              fmt.Sprintf(":%d", s.port),
-		Handler:           s.httpMux,
+		Handler:           corsMiddleware.Handler(logger.LogRequest(s.httpMux)),
 		ReadHeaderTimeout: 10 * time.Second,
 	}
 
 	fmt.Printf("Starting HTTP server on port %d\n", s.port)
 	fmt.Printf("Swagger UI available at http://localhost:%d/swagger/\n", s.port)
-	if err := s.httpServer.ListenAndServe(); err != http.ErrServerClosed {
+	if err = s.httpServer.ListenAndServe(); err != nil && err != http.ErrServerClosed {
 		return fmt.Errorf("failed to serve: %v", err)
 	}
 
@@ -83,59 +122,5 @@ func (s *Server) Stop() {
 		if err := s.httpServer.Shutdown(ctx); err != nil {
 			logger.Log.Error("Error shutting down server", "error", err)
 		}
-	}
-}
-
-func (s *Server) healthCheckHandler(w http.ResponseWriter, _ *http.Request) {
-	w.WriteHeader(http.StatusOK)
-	if _, err := w.Write([]byte("OK")); err != nil {
-		logger.Log.Error("Error writing response", "error", err)
-	}
-}
-
-func (s *Server) serveSwaggerJSON(w http.ResponseWriter, r *http.Request) {
-	swaggerPath := filepath.Join("pkg", "chat", "v1", "chat.swagger.json")
-	http.ServeFile(w, r, swaggerPath)
-}
-
-func (s *Server) serveSwaggerUI(w http.ResponseWriter, r *http.Request) {
-	swaggerTemplate := `
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Swagger UI</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.52.0/swagger-ui.css" >
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.52.0/swagger-ui-bundle.js"> </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.52.0/swagger-ui-standalone-preset.js"> </script>
-</head>
-<body>
-<div id="swagger-ui"></div>
-<script>
-    window.onload = function() {
-        SwaggerUIBundle({
-            url: "/swagger.json",
-            dom_id: '#swagger-ui',
-            presets: [
-                SwaggerUIBundle.presets.apis,
-                SwaggerUIStandalonePreset
-            ],
-            layout: "BaseLayout"
-        })
-    }
-</script>
-</body>
-</html>
-`
-	tmpl, err := template.New("swagger").Parse(swaggerTemplate)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "text/html; charset=utf-8")
-	err = tmpl.Execute(w, nil)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
 }
